--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,9 @@
     "## Counting Tool using Droop and GSheets\n",
     "Based on https://github.com/jklundell/droop\n",
     "\n",
-    "And https://github.com/custozza/droop_from_gspreadsheet\n"
+    "And https://github.com/custozza/droop_from_gspreadsheet\n",
+    "\n",
+    "Checkout submodules: `git submodule update --init --recursive`"
    ]
   },
   {
@@ -44,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -e deps/droop\n",
-    "# ignore egg not found error"
+    "# uncomment to install droop, running with python works anyway\n",
+    "# !pip install -e deps/droop/setup.py"
    ]
   },
   {
@@ -61,10 +63,11 @@
     "BLT_FILE = 'vote.blt'\n",
     "PATH_TO_DROOP = \"deps/droop\"\n",
     "PYTHON_COMMAND = \"python\"\n",
-    "ELECTION_TITLE = \"Konferenz\"\n",
+    "ELECTION_TITLE = \"Conference\"\n",
     "LOG_FILE = 'election.log'\n",
     "ELECTED_FILE = 'elected.txt'\n",
-    "NUM_SEATS = 11"
+    "IGNORE_CANDIDATES = []\n",
+    "NUM_SEATS = 12"
    ]
   },
   {
@@ -102,8 +105,9 @@
     "    # Process or print the CSV data as needed\n",
     "    with open(VOTE_FILE, 'w', encoding=\"utf-8\") as f:\n",
     "        print(csv_data, file=f)\n",
+    "    print(f'Downloaded vote data from {url} to {VOTE_FILE})')\n",
     "else:\n",
-    "    print(f\"Failed to fetch data. Status code: {response.status_code}\")"
+    "    print(f'Failed to fetch data. Status code: {response.status_code}')"
    ]
   },
   {
@@ -129,34 +133,6 @@
     "# for i, (c, votes) in enumerate(candidates):\n",
     "#     print(f\"{i+1:2})\", c.ljust(longest_name_length+5), '\\t'.join(votes))\n",
     "\n",
-    "\n",
-    "# CONVERT BALLOTS MATRIX TO SORTED CANDIDATES ID PER BALLOT\n",
-    "\n",
-    "df = pd.read_csv(VOTE_FILE)\n",
-    "# number_of_winners = re.search(r'\\d+', df.columns[0]).group()\n",
-    "\n",
-    "candidates = df.values[:, 0]\n",
-    "ballots = df.values[:, 1:]\n",
-    "\n",
-    "ballots_with_candidate_preferences = [\n",
-    "                                        [(candidate, pref) \n",
-    "                                        for candidate, pref in enumerate(ballot) \n",
-    "                                        if not np.isnan(pref)] \n",
-    "                                        for ballot in ballots.T]\n",
-    "\n",
-    "ballots_with_candidates_sorted_by_preference = [\n",
-    "                                        [candidate \n",
-    "                                        for candidate, preference in sorted(ballot, key=lambda x: x[1])] \n",
-    "                                        for ballot in ballots_with_candidate_preferences]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "id": "2300bbb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# # transform to create blt\n",
     "\n",
     "# number_of_votes = len(candidates[0][1])\n",
@@ -175,15 +151,58 @@
     "#             # empty slot\n",
     "#             pass\n",
     "\n",
-    "\n",
-    "# # remove empty fields\n",
-    "# ballot_matrix = [[placement for placement in ballot if placement] for ballot in ballot_matrix ]\n",
-    "    \n",
     "# # print for control\n",
     "# for i, ballot in enumerate(ballot_matrix):\n",
     "#     names = [candidates[c-1][0] for c in ballot] # c-1 due to the shift of indexing of candidates\n",
     "#     ballot = [str(b) for b in ballot]\n",
-    "#     print(i, \" \".join(ballot), '|', \",\".join(names))\n"
+    "#     print(i, \" \".join(ballot), '|', \",\".join(names))\n",
+    "\n",
+    "\n",
+    "# CONVERT BALLOTS MATRIX TO SORTED CANDIDATES ID PER BALLOT\n",
+    "\n",
+    "df = pd.read_csv(VOTE_FILE)\n",
+    "\n",
+    "# remove votes for ignored candidates\n",
+    "print('before dropping ignored candidates:')\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.width', 500)\n",
+    "print(df)\n",
+    "unknown_ignored_candidates = [c for c in IGNORE_CANDIDATES if c not in df.values[:, 0]]\n",
+    "if unknown_ignored_candidates:\n",
+    "    raise ValueError(f\"Unknown candidates: {unknown_ignored_candidates}\")\n",
+    "ignore_ids = [i for i, c in enumerate(df.values[:, 0]) if c in IGNORE_CANDIDATES]\n",
+    "# shift the indexing, large->small to avoid changing the index of the next candidate\n",
+    "ignore_ids_desc = sorted(ignore_ids, reverse=True)\n",
+    "for candidate_to_ignore in ignore_ids_desc:\n",
+    "    position = df.iloc[candidate_to_ignore, 1:].to_numpy().astype(np.float32)\n",
+    "    position_bc = np.broadcast_to(position, (len(df), len(position)))\n",
+    "    needs_shift = df.iloc[:, 1:] > position_bc\n",
+    "    position_shift = np.where(needs_shift, -1, 0)\n",
+    "    df.iloc[:, 1:] += position_shift\n",
+    "# set rows with ignored candidates to NaN\n",
+    "df.iloc[ignore_ids, 1:] = np.nan\n",
+    "# remove ignored candidates\n",
+    "df = df.drop(df.index[ignore_ids])\n",
+    "\n",
+    "print('\\nafter dropping ignored candidates:')\n",
+    "print(df)\n",
+    "\n",
+    "candidates = df.values[:, 0]\n",
+    "ballots = df.values[:, 1:]\n",
+    "\n",
+    "ballots_with_candidate_preferences = [\n",
+    "                                        [(candidate, pref) \n",
+    "                                        for candidate, pref in enumerate(ballot) \n",
+    "                                        if not np.isnan(pref)] \n",
+    "                                        for ballot in ballots.T]\n",
+    "\n",
+    "ballots_with_candidates_sorted_by_preference = [\n",
+    "                                        [candidate \n",
+    "                                        for candidate, preference in sorted(ballot, key=lambda x: x[1])] \n",
+    "                                        for ballot in ballots_with_candidate_preferences]\n",
+    "\n",
+    "print(f'Number of candidates: {len(candidates)}, Number of ballots: {len(ballots_with_candidates_sorted_by_preference)}')\n",
+    "print('\\n'.join([' '.join(str(b)) for b in ballots_with_candidates_sorted_by_preference]))\n"
    ]
   },
   {
@@ -201,22 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pattern = r'\\d+'\n",
-    "\n",
-    "# # Search for the first number in the text to extract the number of winners\n",
-    "# # match = re.search(pattern, lines[0].split(',')[0])  \n",
-    "# # number_of_winners = match.group()\n",
-    "    \n",
-    "# with open(BLT_FILE, \"w\", encoding=\"utf-8\") as f:\n",
-    "#     print(number_of_candidates, NUM_SEATS, file = f)\n",
-    "#     for i, ballot in enumerate(ballot_matrix):\n",
-    "#         ballot = [str(b) for b in ballot]\n",
-    "#         print(1, \" \".join(ballot), 0, file=f)\n",
-    "#     print(0, '# end of ballots marker', file=f)\n",
-    "#     for i, candidate in enumerate(candidates):\n",
-    "#         print(f'\"{candidate[0]}\" #{i+1}', file=f)  # offset due to shift\n",
-    "#     print('\"Sektion 8 Jahreskonferenz 2023\"', file=f)\n",
-    "\n",
     "blt_ballots = \"\\n\".join(\n",
     "    [f\"1 {' '.join([str(c+1) for c in ballot])} 0 #\" + \", \".join(candidates[c] for c in ballot)\n",
     "     for ballot in ballots_with_candidates_sorted_by_preference])\n",
@@ -250,13 +253,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test call directly\n",
+    "# !python deps/droop/Droop.py meek vote.blt\n",
+    "\n",
     "command = [PYTHON_COMMAND, PATH_TO_DROOP+'/Droop.py', \"meek\", BLT_FILE]\n",
     "print(' '.join(command))\n",
     "result = subprocess.run(command, capture_output=True, text=True)\n",
     "with open(LOG_FILE, 'w') as file:\n",
     "    file.write(result.stdout)\n",
     "\n",
-    "print('Ballots:', number_of_votes, 'Candidates:', number_of_candidates, 'Winners:', NUM_SEATS)\n",
+    "number_of_votes = len(ballots[0])\n",
+    "print('Ballots:', number_of_votes, 'Candidates:', NUM_SEATS, 'Winners:', NUM_SEATS)\n",
     "rounds = result.stdout.split('Round ')\n",
     "election_pattern= r'Action: Elect: (?P<candidate>.*)'\n",
     "electees_in_rounds = [(i, elected.group('candidate')) \n",
@@ -264,25 +271,16 @@
     "                      for elected in re.finditer(election_pattern, r) \n",
     "                       if elected ]\n",
     "\n",
-    "electees_in_round = \"\\n\".join(f\"{str(round).rjust(5)} {person}\" for round, person in electees_in_rounds)\n",
+    "electees_in_rounds = [(id, round, person) for id, (round, person) in enumerate(electees_in_rounds, 1)]\n",
+    "\n",
+    "electees_in_round = \"\\n\".join(f\"{str(id).rjust(2)}{str(round).rjust(5)} {person}\" for id, round, person in electees_in_rounds)\n",
     "elected_text = f\"\"\"\n",
-    "ROUND NAME\n",
+    "ID ROUND NAME\n",
     "{electees_in_round}\n",
     "\"\"\"\n",
     "with open(ELECTED_FILE, 'w') as file:\n",
     "    file.write(elected_text)\n",
     "    print(elected_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "id": "b3bfa145",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test call directly\n",
-    "# !python deps/droop/Droop.py meek vote.blt"
    ]
   }
  ],
