minor improvements, git ignore results

--- a/main.ipynb
+++ b/main.ipynb
@@ -59,15 +59,16 @@
    "source": [
     "# Update these:\n",
     "SPREADSHEET_ID = '1ZaN_eCVB2kFFkmeShoGR--mXGxCig28xbw_maABR7zQ' # ID from your public spreadsheet URL\n",
-    "VOTE_FILE = 'vote.csv'\n",
-    "BLT_FILE = 'vote.blt'\n",
+    "NUM_SEATS = 14\n",
+    "IGNORE_CANDIDATES = []\n",
+    "\n",
+    "VOTE_FILE = f'vote_seats_{NUM_SEATS}.csv'\n",
+    "BLT_FILE = f'vote_seats_{NUM_SEATS}.blt'\n",
     "PATH_TO_DROOP = \"deps/droop\"\n",
     "PYTHON_COMMAND = \"python\"\n",
-    "ELECTION_TITLE = \"Conference\"\n",
-    "LOG_FILE = 'election.log'\n",
-    "ELECTED_FILE = 'elected.txt'\n",
-    "IGNORE_CANDIDATES = []\n",
-    "NUM_SEATS = 12"
+    "ELECTION_TITLE = \"S8_Konferenz_2023\"\n",
+    "LOG_FILE = f'election_seats_{NUM_SEATS}.log'\n",
+    "ELECTED_FILE = f'elected_seats_{NUM_SEATS}.txt'"
    ]
   },
   {
@@ -125,67 +126,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # control terminal output\n",
-    "# lines = csv_data.split('\\n')\n",
-    "# candidates = [[line.split(',')[0], line.strip().split(',')[1:]] for line in lines[1:]]\n",
-    "# longest_name_length = max([len(c[0]) for c in candidates])\n",
-    "\n",
-    "# for i, (c, votes) in enumerate(candidates):\n",
-    "#     print(f\"{i+1:2})\", c.ljust(longest_name_length+5), '\\t'.join(votes))\n",
-    "\n",
-    "# # transform to create blt\n",
-    "\n",
-    "# number_of_votes = len(candidates[0][1])\n",
-    "# number_of_candidates = len(candidates)\n",
-    "\n",
-    "# ballot_matrix =  [[None] * number_of_candidates for _ in range(number_of_votes)]\n",
-    "\n",
-    "# for ballot in range(number_of_votes): \n",
-    "#     for candidate in range(number_of_candidates):\n",
-    "#         placement = candidates[candidate][1][ballot]\n",
-    "#         if placement:\n",
-    "#             placement = int(placement)\n",
-    "#             assert ballot_matrix[ballot][placement-1] == None\n",
-    "#             ballot_matrix[ballot][placement-1] = candidate + 1 # correcting the 0 indexing\n",
-    "#         else:\n",
-    "#             # empty slot\n",
-    "#             pass\n",
-    "\n",
-    "# # print for control\n",
-    "# for i, ballot in enumerate(ballot_matrix):\n",
-    "#     names = [candidates[c-1][0] for c in ballot] # c-1 due to the shift of indexing of candidates\n",
-    "#     ballot = [str(b) for b in ballot]\n",
-    "#     print(i, \" \".join(ballot), '|', \",\".join(names))\n",
-    "\n",
-    "\n",
     "# CONVERT BALLOTS MATRIX TO SORTED CANDIDATES ID PER BALLOT\n",
     "\n",
     "df = pd.read_csv(VOTE_FILE)\n",
     "\n",
     "# remove votes for ignored candidates\n",
-    "print('before dropping ignored candidates:')\n",
-    "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.width', 500)\n",
-    "print(df)\n",
-    "unknown_ignored_candidates = [c for c in IGNORE_CANDIDATES if c not in df.values[:, 0]]\n",
-    "if unknown_ignored_candidates:\n",
-    "    raise ValueError(f\"Unknown candidates: {unknown_ignored_candidates}\")\n",
-    "ignore_ids = [i for i, c in enumerate(df.values[:, 0]) if c in IGNORE_CANDIDATES]\n",
-    "# shift the indexing, large->small to avoid changing the index of the next candidate\n",
-    "ignore_ids_desc = sorted(ignore_ids, reverse=True)\n",
-    "for candidate_to_ignore in ignore_ids_desc:\n",
-    "    position = df.iloc[candidate_to_ignore, 1:].to_numpy().astype(np.float32)\n",
-    "    position_bc = np.broadcast_to(position, (len(df), len(position)))\n",
-    "    needs_shift = df.iloc[:, 1:] > position_bc\n",
-    "    position_shift = np.where(needs_shift, -1, 0)\n",
-    "    df.iloc[:, 1:] += position_shift\n",
-    "# set rows with ignored candidates to NaN\n",
-    "df.iloc[ignore_ids, 1:] = np.nan\n",
-    "# remove ignored candidates\n",
-    "df = df.drop(df.index[ignore_ids])\n",
+    "if IGNORE_CANDIDATES:\n",
+    "    print('before dropping ignored candidates:')\n",
+    "    pd.set_option('display.max_columns', 500)\n",
+    "    pd.set_option('display.width', 500)\n",
+    "    print(df)\n",
+    "    unknown_ignored_candidates = [c for c in IGNORE_CANDIDATES if c not in df.values[:, 0]]\n",
+    "    if unknown_ignored_candidates:\n",
+    "        raise ValueError(f\"Unknown candidates: {unknown_ignored_candidates}\")\n",
+    "    ignore_ids = [i for i, c in enumerate(df.values[:, 0]) if c in IGNORE_CANDIDATES]\n",
+    "    # shift the indexing, large->small to avoid changing the index of the next candidate\n",
+    "    ignore_ids_desc = sorted(ignore_ids, reverse=True)\n",
+    "    for candidate_to_ignore in ignore_ids_desc:\n",
+    "        position = df.iloc[candidate_to_ignore, 1:].to_numpy().astype(np.float32)\n",
+    "        position_bc = np.broadcast_to(position, (len(df), len(position)))\n",
+    "        needs_shift = df.iloc[:, 1:] > position_bc\n",
+    "        position_shift = np.where(needs_shift, -1, 0)\n",
+    "        df.iloc[:, 1:] += position_shift\n",
+    "    # set rows with ignored candidates to NaN\n",
+    "    df.iloc[ignore_ids, 1:] = np.nan\n",
+    "    # remove ignored candidates\n",
+    "    df = df.drop(df.index[ignore_ids])\n",
     "\n",
-    "print('\\nafter dropping ignored candidates:')\n",
-    "print(df)\n",
+    "    print('\\nafter dropping ignored candidates:')\n",
+    "    print(df)\n",
     "\n",
     "candidates = df.values[:, 0]\n",
     "ballots = df.values[:, 1:]\n",
@@ -226,14 +195,14 @@
     "\n",
     "blt_candidates = \"\\n\".join(f'\"{candidate} #{i}\"' for i, candidate in enumerate(candidates,1))\n",
     "\n",
-    "with open('vote.blt', 'w') as file:\n",
-    "    blt_content = f\"\"\"\n",
-    "    {len(candidates)} {NUM_SEATS}\n",
-    "    {blt_ballots}\n",
-    "    0 # end marker\n",
-    "    {blt_candidates}\n",
-    "    \"{ELECTION_TITLE}\" #Titel\n",
-    "    \"\"\"\n",
+    "with open(BLT_FILE, 'w') as file:\n",
+    "    blt_content = f'''\n",
+    "{len(candidates)} {NUM_SEATS}\n",
+    "{blt_ballots}\n",
+    "0 # end marker\n",
+    "{blt_candidates}\n",
+    "\"{ELECTION_TITLE}\" #Titel\n",
+    "    '''\n",
     "    file.write(blt_content)\n",
     "    print(blt_content)"
    ]
@@ -263,7 +232,7 @@
     "    file.write(result.stdout)\n",
     "\n",
     "number_of_votes = len(ballots[0])\n",
-    "print('Ballots:', number_of_votes, 'Candidates:', NUM_SEATS, 'Winners:', NUM_SEATS)\n",
+    "print('Ballots:', number_of_votes, 'Candidates:', len(candidates), 'Winners:', NUM_SEATS)\n",
     "rounds = result.stdout.split('Round ')\n",
     "election_pattern= r'Action: Elect: (?P<candidate>.*)'\n",
     "electees_in_rounds = [(i, elected.group('candidate')) \n",
