--- a/main.ipynb
+++ b/main.ipynb
@@ -232,8 +232,9 @@
     "    file.write(result.stdout)\n",
     "\n",
     "number_of_votes = len(ballots[0])\n",
+    "candidates_str = f'Candidates: {\", \".join(candidates)}'\n",
     "stats_str = f'Ballots: {number_of_votes}, Candidates: {len(candidates)}, Winners: {NUM_SEATS}'\n",
-    "ignored_str = f'Ignored candidates: {IGNORE_CANDIDATES}' if IGNORE_CANDIDATES else 'None'\n",
+    "ignored_str = f'Ignored candidates: {\", \".join(IGNORE_CANDIDATES)}' if IGNORE_CANDIDATES else 'None'\n",
     "\n",
     "rounds = result.stdout.split('Round ')\n",
     "election_pattern= r'Action: Elect: (?P<candidate>.*)'\n",
@@ -246,6 +247,7 @@
     "\n",
     "electees_in_round = \"\\n\".join(f\"{str(id).rjust(2)}{str(round).rjust(5)} {person}\" for id, round, person in electees_in_rounds)\n",
     "elected_text = f\"\"\"\n",
+    "{candidates_str}\n",
     "{stats_str}\n",
     "{ignored_str}\n",
     "ID ROUND NAME\n",
