extra cell for pip install

--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,16 @@
    "outputs": [],
    "source": [
     "# !pip install requests \n",
-    "!pip install requests pandas numpy\n",
+    "!pip install requests pandas numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "691cc174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "import requests\n",
     "import pandas as pd\n",
