evaluate ranking of elected candidates

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "And https://github.com/custozza/droop_from_gspreadsheet\n",
     "\n",
-    "Checkout submodules: `git submodule update --init --recursive`"
+    "Checkout submodules before starting to get Droop: `git submodule update --init --recursive`"
    ]
   },
   {
@@ -19,7 +19,7 @@
    "id": "cd335460",
    "metadata": {},
    "source": [
-    "# Setup"
+    "## Setup"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install requests \n",
+    "# install packages, once should be enough\n",
     "!pip install requests pandas numpy"
    ]
   },
@@ -45,39 +45,43 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import os\n",
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c680ecb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# uncomment to install droop, running with python works anyway\n",
-    "# !pip install -e deps/droop/setup.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
    "id": "084a96be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update these:\n",
-    "SPREADSHEET_ID = '1ZaN_eCVB2kFFkmeShoGR--mXGxCig28xbw_maABR7zQ' # ID from your public spreadsheet URL\n",
+    "# Update these:  \n",
+    "# SPREADSHEET_ID = '1ZaN_eCVB2kFFkmeShoGR--mXGxCig28xbw_maABR7zQ' # ID from your public spreadsheet URL\n",
+    "SPREADSHEET_ID = '1-cwFOFbDAMAmhBQCnq40DfnqgV6E17Od3w3GxY2A0ig' # ID from your public spreadsheet URL\n",
     "NUM_SEATS = 14\n",
+    "IS_PREFERENCES_LIST = True  # enable if ordering is important, STV itself doesn't produce a ranking\n",
     "IGNORE_CANDIDATES = []\n",
     "\n",
-    "VOTE_FILE = f'vote_seats_{NUM_SEATS}.csv'\n",
-    "BLT_FILE = f'vote_seats_{NUM_SEATS}.blt'\n",
     "PATH_TO_DROOP = \"deps/droop\"\n",
     "PYTHON_COMMAND = \"python\"\n",
     "ELECTION_TITLE = \"S8_Konferenz_2023\"\n",
-    "LOG_FILE = f'election_seats_{NUM_SEATS}.log'\n",
-    "ELECTED_FILE = f'elected_seats_{NUM_SEATS}.txt'"
+    "\n",
+    "VOTE_CSV = f'logs/vote.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eba8304c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if IS_PREFERENCES_LIST:\n",
+    "    eval_seats = list(range(1, NUM_SEATS + 1))\n",
+    "else:\n",
+    "    eval_seats = [NUM_SEATS]"
    ]
   },
   {
@@ -85,7 +89,7 @@
    "id": "988b67f7",
    "metadata": {},
    "source": [
-    "# Reading and Parsing"
+    "## Reading and Parsing"
    ]
   },
   {
@@ -93,12 +97,12 @@
    "id": "3b31b2f7",
    "metadata": {},
    "source": [
-    "FETCH RESULT FROM SPREAD SHEET"
+    "### Fetch Result from Spreadsheet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "id": "80b84797-b3da-4b4a-bd9a-058709bed626",
    "metadata": {},
    "outputs": [],
@@ -113,9 +117,10 @@
     "    csv_data = response.text\n",
     "\n",
     "    # Process or print the CSV data as needed\n",
-    "    with open(VOTE_FILE, 'w', encoding=\"utf-8\") as f:\n",
+    "    os.makedirs('logs', exist_ok=True)\n",
+    "    with open(VOTE_CSV, 'w', encoding=\"utf-8\") as f:\n",
     "        print(csv_data, file=f)\n",
-    "    print(f'Downloaded vote data from {url} to {VOTE_FILE})')\n",
+    "    print(f'Downloaded vote data from {url} to {VOTE_CSV})')\n",
     "else:\n",
     "    print(f'Failed to fetch data. Status code: {response.status_code}')"
    ]
@@ -125,19 +130,19 @@
    "id": "f62efda2",
    "metadata": {},
    "source": [
-    "CONVERT BALLOTS MATRIX TO SORTED CANDIDATES ID PER BALLOT"
+    "### Convert Ballots Matrix to Sorted Candidates ID per Ballot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "id": "32cb8cae",
    "metadata": {},
    "outputs": [],
    "source": [
     "# CONVERT BALLOTS MATRIX TO SORTED CANDIDATES ID PER BALLOT\n",
     "\n",
-    "df = pd.read_csv(VOTE_FILE)\n",
+    "df = pd.read_csv(VOTE_CSV)\n",
     "\n",
     "# remove votes for ignored candidates\n",
     "if IGNORE_CANDIDATES:\n",
@@ -185,10 +190,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40dec239",
+   "id": "d15d0ea1",
    "metadata": {},
    "source": [
-    "WRITE BLT"
+    "### Write Droop's BLT Files"
    ]
   },
   {
@@ -198,30 +203,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "blt_ballots = \"\\n\".join(\n",
-    "    [f\"1 {' '.join([str(c+1) for c in ballot])} 0 #\" + \", \".join(candidates[c] for c in ballot)\n",
-    "     for ballot in ballots_with_candidates_sorted_by_preference])\n",
+    "def get_blt_file(seats: int):\n",
+    "    return f'logs/vote_seats_{seats}.blt'\n",
     "\n",
-    "blt_candidates = \"\\n\".join(f'\"{candidate} #{i}\"' for i, candidate in enumerate(candidates,1))\n",
+    "def write_blt(seats: int):\n",
+    "    blt_ballots = \"\\n\".join(\n",
+    "        [f\"1 {' '.join([str(c+1) for c in ballot])} 0 #\" + \", \".join(candidates[c] for c in ballot)\n",
+    "        for ballot in ballots_with_candidates_sorted_by_preference])\n",
     "\n",
-    "with open(BLT_FILE, 'w') as file:\n",
-    "    blt_content = f'''\n",
-    "{len(candidates)} {NUM_SEATS}\n",
+    "    blt_candidates = \"\\n\".join(f'\"{candidate} #{i}\"' for i, candidate in enumerate(candidates,1))\n",
+    "\n",
+    "    blt_file = get_blt_file(seats)\n",
+    "    with open(blt_file, 'w') as file:\n",
+    "        blt_content = f'''\n",
+    "{len(candidates)} {seats}\n",
     "{blt_ballots}\n",
     "0 # end marker\n",
     "{blt_candidates}\n",
     "\"{ELECTION_TITLE}\" #Titel\n",
-    "    '''\n",
-    "    file.write(blt_content)\n",
-    "    print(blt_content)"
+    "        '''\n",
+    "        file.write(blt_content)\n",
+    "        print(blt_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a9c8670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for seats in eval_seats:\n",
+    "    write_blt(seats)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7960a8e0",
+   "id": "afdc72fc",
    "metadata": {},
    "source": [
-    "EXECUTE DROOP"
+    "## Evaluate Ballots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "524f980a",
+   "metadata": {},
+   "source": [
+    "### Run Droop for all seats"
    ]
   },
   {
@@ -234,37 +263,209 @@
     "# Test call directly\n",
     "# !python deps/droop/Droop.py meek vote.blt\n",
     "\n",
-    "command = [PYTHON_COMMAND, PATH_TO_DROOP+'/Droop.py', \"meek\", BLT_FILE]\n",
-    "print(' '.join(command))\n",
-    "result = subprocess.run(command, capture_output=True, text=True)\n",
-    "with open(LOG_FILE, 'w') as file:\n",
-    "    file.write(result.stdout)\n",
+    "def run_droop(seats: int) -> list:\n",
+    "    blt_file = get_blt_file(seats)\n",
+    "    log_file = f'logs/election_seats_{seats}.log'\n",
+    "    elected_file = f'logs/elected_seats_{seats}.txt'\n",
     "\n",
-    "number_of_votes = len(ballots[0])\n",
-    "candidates_str = f'Candidates: {\", \".join(candidates)}'\n",
-    "stats_str = f'Ballots: {number_of_votes}, Candidates: {len(candidates)}, Winners: {NUM_SEATS}'\n",
-    "ignored_str = f'Ignored candidates: {\", \".join(IGNORE_CANDIDATES)}' if IGNORE_CANDIDATES else 'None'\n",
+    "    command = [PYTHON_COMMAND, PATH_TO_DROOP+'/Droop.py', \"meek\", blt_file]\n",
+    "    print(' '.join(command))\n",
+    "    result = subprocess.run(command, capture_output=True, text=True)\n",
+    "    with open(log_file, 'w') as file:\n",
+    "        file.write(result.stdout)\n",
     "\n",
-    "rounds = result.stdout.split('Round ')\n",
-    "election_pattern= r'Action: Elect: (?P<candidate>.*)'\n",
-    "electees_in_rounds = [(i, elected.group('candidate')) \n",
-    "                      for i, r in enumerate(rounds[1:],1)\n",
-    "                      for elected in re.finditer(election_pattern, r) \n",
-    "                       if elected ]\n",
+    "    number_of_votes = len(ballots[0])\n",
+    "    candidates_str = f'Candidates: {\", \".join(candidates)}'\n",
+    "    stats_str = f'Ballots: {number_of_votes}, Candidates: {len(candidates)}, Winners: {seats}'\n",
+    "    ignored_str = f'Ignored candidates: {\", \".join(IGNORE_CANDIDATES)}'\n",
     "\n",
-    "electees_in_rounds = [(id, round, person) for id, (round, person) in enumerate(electees_in_rounds, 1)]\n",
+    "    rounds = result.stdout.split('Round ')\n",
+    "    election_pattern= r'Action: Elect: (?P<candidate>.*)'\n",
+    "    electees_in_rounds = [(i, elected.group('candidate')) \n",
+    "                        for i, r in enumerate(rounds[1:],1)\n",
+    "                        for elected in re.finditer(election_pattern, r) \n",
+    "                        if elected ]\n",
     "\n",
-    "electees_in_round = \"\\n\".join(f\"{str(id).rjust(2)}{str(round).rjust(5)} {person}\" for id, round, person in electees_in_rounds)\n",
-    "elected_text = f\"\"\"\n",
+    "    electees_in_rounds = [(id, round, person) for id, (round, person) in enumerate(electees_in_rounds, 1)]\n",
+    "\n",
+    "    electees_in_round = \"\\n\".join(f\"{str(id).rjust(2)}{str(round).rjust(5)} {person}\" for id, round, person in electees_in_rounds)\n",
+    "    elected_text = f\"\"\"\n",
     "{candidates_str}\n",
     "{stats_str}\n",
     "{ignored_str}\n",
     "ID ROUND NAME\n",
     "{electees_in_round}\n",
-    "\"\"\"\n",
-    "with open(ELECTED_FILE, 'w') as file:\n",
-    "    file.write(elected_text)\n",
-    "    print(elected_text)"
+    "    \"\"\"\n",
+    "    with open(elected_file, 'w') as file:\n",
+    "        file.write(elected_text)\n",
+    "        print(elected_text)\n",
+    "\n",
+    "    return electees_in_rounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ddf4506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electees_info_in_rounds_per_seat = [run_droop(seats) for seats in eval_seats]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a09566",
+   "metadata": {},
+   "source": [
+    "### Evaluate Ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21838280",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop ID and Round columns\n",
+    "electees_in_rounds_per_seat = [[person[2] for person in electees] for electees in electees_info_in_rounds_per_seat]\n",
+    "for num_seats, electees in zip(eval_seats, electees_in_rounds_per_seat):\n",
+    "    print(f'{num_seats} seats: {electees}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "101284cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get changes\n",
+    "new_elected_per_seat = []\n",
+    "not_elected_anymore_per_seat = []\n",
+    "prev_elected = []\n",
+    "for num_seats in eval_seats:\n",
+    "    elected = electees_in_rounds_per_seat[num_seats-1]\n",
+    "    new_elected = [e for e in elected if e not in prev_elected]\n",
+    "    not_elected_anymore = [e for e in prev_elected if e not in elected]\n",
+    "    prev_elected = elected\n",
+    "    new_elected_per_seat.append(new_elected)\n",
+    "    not_elected_anymore_per_seat.append(not_elected_anymore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3f400ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print Changes\n",
+    "def print_changes(new_elected_per_seat, not_elected_anymore_per_seat, print_to_file=None):\n",
+    "    print_str = ''\n",
+    "    for num_seats, new_elected, not_elected_anymore in zip(eval_seats, new_elected_per_seat, not_elected_anymore_per_seat):\n",
+    "        print_str += f'\\n{num_seats} seats: +{new_elected}, -{not_elected_anymore}'\n",
+    "    print(print_str)\n",
+    "    if print_to_file:\n",
+    "        with open(print_to_file, 'w') as file:\n",
+    "            file.write(print_str)\n",
+    "\n",
+    "print_changes(new_elected_per_seat, not_elected_anymore_per_seat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0955dd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_preferences_for_candidate(candidate: str) -> list:\n",
+    "    candidate_id = int(candidate.split(' #')[-1]) - 1\n",
+    "    ballots_including_candidate = [i+1 for i, ballot in enumerate(ballots_with_candidates_sorted_by_preference) if candidate_id in ballot]\n",
+    "    ballot_preferences_ids = [ballot.index(candidate_id) + 1 for ballot in ballots_with_candidates_sorted_by_preference if candidate_id in ballot]\n",
+    "    return ballots_including_candidate, ballot_preferences_ids\n",
+    "\n",
+    "def compare_preferences(prefs1: list, prefs2: list) -> int:\n",
+    "    prefs1_sorted = sorted(prefs1)\n",
+    "    prefs2_sorted = sorted(prefs2)\n",
+    "    zip_list = list(itertools.zip_longest(prefs1_sorted, prefs2_sorted))\n",
+    "    print(f'Comparing preferences: {zip_list}')\n",
+    "    for p1, p2 in zip_list:\n",
+    "        if p1 is None:\n",
+    "            return -1\n",
+    "        elif p2 is None:\n",
+    "            return 1\n",
+    "        elif p1 < p2:\n",
+    "            return 1\n",
+    "        elif p1 > p2:\n",
+    "            return -1\n",
+    "\n",
+    "    return 0  # equal\n",
+    "\n",
+    "# Test preferences comparison\n",
+    "if False:\n",
+    "    print(get_preferences_for_candidate('Candidate 1 #1'))\n",
+    "    print(compare_preferences([1, 2, 3], [1, 2, 3]))  # equal -> 0\n",
+    "    print(compare_preferences([1, 2, 3], [1, 2, 4]))  # first smaller -> 1\n",
+    "    print(compare_preferences([1, 2, 3], [1, 2, 2]))  # first larger -> -1\n",
+    "    print(compare_preferences([1, 2, 3], [1, 2]))  # first has more votes -> 1\n",
+    "    print(compare_preferences([1, 2, 3], [1, 2, 3, 4]))  # first has less votes -> -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e1ea7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Resolve case where an electee drops out for two others and is re-elected in the next round\n",
+    "new_elected_per_seat_resolved = new_elected_per_seat.copy()\n",
+    "not_elected_anymore_per_seat_resolved = not_elected_anymore_per_seat.copy()\n",
+    "for num_seats in eval_seats:\n",
+    "    new_elected = new_elected_per_seat_resolved[num_seats-1]\n",
+    "    not_elected_anymore = not_elected_anymore_per_seat_resolved[num_seats-1]\n",
+    "    if len(new_elected) == 2 and len(not_elected_anymore) == 1:\n",
+    "        if num_seats >= NUM_SEATS:\n",
+    "            print(f'Warning: Dropout with max seats, resolve manually: {new_elected} and {not_elected_anymore} in {num_seats} seats election')\n",
+    "        else:\n",
+    "            if new_elected_per_seat_resolved[num_seats] != not_elected_anymore:  # not elected anymore needs to be re-elected with one more seat\n",
+    "                print(f'Error: {not_elected_anymore[0]} drops out with {num_seats} seats, but is not re-elected with {num_seats+1} seats')\n",
+    "            else:\n",
+    "                print(f'Case to resolve: {num_seats} seats: +{new_elected}, -{not_elected_anymore}')\n",
+    "\n",
+    "                candidate_a, candidate_b = new_elected\n",
+    "                candidate_a_ballots, candidate_a_prefs,  = get_preferences_for_candidate(candidate_a)\n",
+    "                candidate_b_ballots, candidate_b_prefs = get_preferences_for_candidate(candidate_b)\n",
+    "                print(f'{candidate_a} ballots: {candidate_a_ballots}')\n",
+    "                print(f'{candidate_b} ballots: {candidate_b_ballots}')\n",
+    "                print(f'{candidate_a} preferences: {candidate_a_prefs}')\n",
+    "                print(f'{candidate_b} preferences: {candidate_b_prefs}')\n",
+    "                comp_res = compare_preferences(candidate_a_prefs, candidate_b_prefs)\n",
+    "                if comp_res == 0:\n",
+    "                    print(f'Error: {candidate_a} and {candidate_b} have equal preferences. Resolve manually.')\n",
+    "                elif comp_res == 1:\n",
+    "                    print(f'{candidate_a} has better/more votes than {candidate_b}')\n",
+    "                    new_elected_per_seat_resolved[num_seats-1] = [candidate_a]\n",
+    "                    new_elected_per_seat_resolved[num_seats] = [candidate_b]\n",
+    "                    not_elected_anymore_per_seat_resolved[num_seats-1] = []\n",
+    "                elif comp_res == -1:\n",
+    "                    print(f'{candidate_b} has better/more votes than {candidate_a}')\n",
+    "                    new_elected_per_seat_resolved[num_seats-1] = [candidate_b]\n",
+    "                    new_elected_per_seat_resolved[num_seats] = [candidate_a]\n",
+    "                    not_elected_anymore_per_seat_resolved[num_seats-1] = []\n",
+    "                else:\n",
+    "                    print(f'Error: unexpected comparison result {comp_res}')\n",
+    "    elif len(new_elected) == 1 and len(not_elected_anymore) == 0:\n",
+    "        pass  # default case\n",
+    "    else:\n",
+    "        print(f'Warning: unexpected changes in {num_seats} seats election: +{new_elected}, -{not_elected_anymore}')\n",
+    "\n",
+    "print('\\nAfter resolving:')\n",
+    "print_changes(new_elected_per_seat_resolved, not_elected_anymore_per_seat_resolved, print_to_file='logs/00_election_result.txt')"
    ]
   }
  ],
